--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,5 +41,8 @@ jobs:
           [[ "${{ matrix.helm-version }}" == v4* ]] && VERIFY_FLAG="--verify=false"
           helm plugin install $VERIFY_FLAG https://github.com/databus23/helm-diff --version v3.12.4
 
+      - name: Install eyaml
+        run: sudo gem install hiera-eyaml --no-doc
+
       - name: Run tests
         run: make test
