--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,15 @@ jobs:
   docker:
     needs: test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - helm-version: 'v3.19.4'
+            helm-major: 'helm3'
+            default: false
+          - helm-version: 'v4.0.4'
+            helm-major: 'helm4'
+            default: true
     permissions:
       contents: read
       packages: write
@@ -65,10 +74,12 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
-          flavor: latest=auto
+          flavor: latest=${{ matrix.default }}
           tags: |
-            type=semver,pattern=v{{version}}
-            type=ref,event=pr
+            type=semver,pattern=v{{version}},enable=${{ matrix.default }}
+            type=semver,pattern=v{{version}},suffix=-${{ matrix.helm-major }}
+            type=semver,pattern=v{{version}},suffix=-${{ matrix.helm-version }}
+            type=ref,event=pr,suffix=-${{ matrix.helm-major }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -79,3 +90,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             VERSION=${{ github.ref_type == 'tag' && github.ref_name || 'latest' }}
+            GLOBAL_HELM_VERSION=${{ matrix.helm-version }}
