--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,21 @@ on:
     branches: [master]
 
 jobs:
+  load-helm-versions:
+    runs-on: ubuntu-latest
+    outputs:
+      helm3: ${{ steps.versions.outputs.helm3 }}
+      helm4: ${{ steps.versions.outputs.helm4 }}
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Load and export versions
+        id: versions
+        run: |
+          source build/helm-versions.env
+          echo "helm3=$HELM3_VERSION" >> $GITHUB_OUTPUT
+          echo "helm4=$HELM4_VERSION" >> $GITHUB_OUTPUT
+
   commitlint:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
@@ -20,10 +35,14 @@ jobs:
       - uses: wagoid/commitlint-github-action@v6
 
   test:
+    needs: load-helm-versions
     uses: ./.github/workflows/test.yml
+    with:
+      helm3-version: v${{ needs.load-helm-versions.outputs.helm3 }}
+      helm4-version: v${{ needs.load-helm-versions.outputs.helm4 }}
 
   goreleaser:
-    needs: test
+    needs: [test, load-helm-versions]
     if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     permissions:
@@ -59,17 +78,19 @@ jobs:
           args: release ${{ github.ref_type != 'tag' && '--skip=publish,validate' || '' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HELM3_VERSION: ${{ needs.load-helm-versions.outputs.helm3 }}
+          HELM4_VERSION: ${{ needs.load-helm-versions.outputs.helm4 }}
 
   docker:
-    needs: test
+    needs: [test, load-helm-versions]
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - helm-version: '3.19.4'
+          - helm-version: ${{ needs.load-helm-versions.outputs.helm3 }}
             helm-major: 'helm3'
             default: false
-          - helm-version: '4.0.4'
+          - helm-version: ${{ needs.load-helm-versions.outputs.helm4 }}
             helm-major: 'helm4'
             default: true
     permissions:
@@ -117,6 +138,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: build/Dockerfile
           push: ${{ startsWith(github.ref, 'refs/tags/') }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
